etc/k8s/istio/canary/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-http-test-deployment-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-http-test
      version: canary
  template:
    metadata:
      labels:
        app: node-http-test
        version: canary
    spec:
      containers:
      - name: node-http-test-canary
        image: fabiojapa/node-http-test:2.0.1
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          timeoutSeconds: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          timeoutSeconds: 3
          periodSeconds: 10
        resources:
          requests:
            memory: "16Mi"
            cpu: "20m"
          limits:
            memory: "32Mi"
            cpu: "50m"

---
apiVersion: v1
kind: Service
metadata:
  name: node-http-test-canary
  labels:
    app: node-http-test
    version: canary
spec:
  selector:
    app: node-http-test
    version: canary
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP

---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: node-http-test-canary-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "sakanaryistio.io"
    - "node-http-test.default.svc.cluster.local"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: node-http-test-canary-ext
spec:
  hosts:
  - "sakanaryistio.io"
  gateways:
  - node-http-test-canary-gateway
  http:
  - match:
    - headers:
        country:
          exact: MX
    route:
    - destination:
        host: node-http-test-canary
        subset: canary
        port:
          number: 80
      weight: 50
    - destination:
        host: node-http-test
        subset: prod
        port:
          number: 80
      weight: 50

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: node-http-test
spec:
  hosts:
  - "node-http-test"
  - "node-http-test.default.svc.cluster.local"
  http:
  - match:
    - headers:
        country:
          exact: MX
    route:
    - destination:
        host: node-http-test-canary
        subset: canary
        port:
          number: 80
      weight: 90
    - destination:
        host: node-http-test
        subset: prod
        port:
          number: 80
      weight: 10
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: node-http-test
        port:
          number: 80

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: node-http-test-canary
spec:
  host: node-http-test-canary
  subsets:
  - name: prod
    labels:
      version: prod
  - name: canary
    labels:
      version: canary
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 1
      http:
        http1MaxPendingRequests: 1
        maxRequestsPerConnection: 1
    outlierDetection:
      consecutiveErrors: 1
      interval: 15s
      baseEjectionTime: 3m
      maxEjectionPercent: 100
